# deep-text-recognition-benchmark

./: .gitignore  README.md  create_lmdb_dataset.py  dataset.py  easyocr_finetune_base_model.py  easyocr_inspect.py  predict.py  pyproject.toml  test.py  train.py  trainer.py  utils.py
config_files/: en_filtered_config.yaml
script/: easyocr_sft  train
